Chromium Win: Setting square-button appearance reaches NOTREACHED https://bugs.webkit.org/show_bug.cgi?id=66918

Reviewed by Kent Tamura.

Source/WebCore:

Test: fast/css/square-button-appearance.html

* rendering/RenderThemeChromiumWin.cpp:
(WebCore::supportsFocus): Add case for SquareButtonPart.
(WebCore::RenderThemeChromiumWin::supportsFocusRing): Add case for SquareButtonPart.
(WebCore::RenderThemeChromiumWin::getThemeData): Add case for SquareButtonPart.

LayoutTests:

* fast/css/square-button-appearance-expected.txt: Added.
* fast/css/square-button-appearance.html: Added. Test rendering of square-button appearance.
* platform/chromium-linux/fast/css/square-button-appearance-expected.png: Added.
* platform/chromium-win/fast/css/square-button-appearance-expected.png: Added.
* platform/gtk/test_expectations.txt: Added this test as expected to fail.
* platform/mac/fast/css/square-button-appearance-expected.png: Added.
* platform/qt/test_expectations.txt: Added this test as expected to fail.


git-svn-id: svn://svn.chromium.org/blink/trunk@93953 bbb929c8-8fbe-4397-9dbb-9b2b20218538